Fix #2 #8 finalizando docker de teste e componentizando
Signed-off-by: Guilherme Deusdará <guibanci@gmail.com>
Signed-off-by: Beatriz Hanae <beatriz.hanae@gmail.com>
Co-Authored-by: Beatriz Hanae <beatriz.hanae@gmail.com>

--- a/Docker/Test/build.yml
+++ b/Docker/Test/build.yml
@@ -1,14 +1,14 @@
 version: '3.5'
 
 services:
-  sectorserver:
-    image: dulce/sector-server:test
+  hospitalserver:
+    image: dulce/hospital-server:test
     build:
       context: ../../
       dockerfile: Docker/Test/Server/Dockerfile
 
-  sectorclient:
-    image: dulce/sector-client:test
+  hospitalclient:
+    image: dulce/hospital-client:test
     build:
       context: ../../
       dockerfile: Docker/Test/Client/Dockerfile
