HOTFIX #1 arrumando package.json
Signed-off-by: Guilherme Deusdará <guibanci@gmail.com>
Signed-off-by: Beatriz Hanae <beatriz.hanae@gmail.com>
Co-Authored-by: Beatriz Hanae <beatriz.hanae@gmail.com>

--- a/Server/package.json
+++ b/Server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon sector.js",
+    "start": "nodemon hospital.js",
     "test": "nyc --reporter=html --reporter=text mocha",
     "coverage": "npm run cover && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "cover": "istanbul cover _mocha"
